add timezone and try catch to regex

--- a/sitecomber/apps/results/templates/results/pageresult_detail.html
+++ b/sitecomber/apps/results/templates/results/pageresult_detail.html
@@ -27,7 +27,7 @@
 
       {% if object.latest_request and object.latest_request.response %}
       <span class="text-muted"
-        >Last crawled on {{object.latest_request.load_start_time}}</span
+        >Last crawled on {{object.latest_request.load_start_time}} {{object.latest_request.load_start_time|date:'e'}}</span
       >
       {% else %}
       <span class="text-muted">Page has not yet been crawled</span> {% endif %}
