add ability to cap max total of pages parsed, or ignore directories by path-matching

--- a/sitecomber/apps/results/templates/results/pageresult_detail.html
+++ b/sitecomber/apps/results/templates/results/pageresult_detail.html
@@ -36,7 +36,7 @@
       href="{{object.url}}"
       target="_blank"
       class="float-right badge badge-info p-2"
-      >Visit</a
+      >Visit &nearr;</a
     >
   </div>
   <div class="card text-dark">
@@ -338,7 +338,7 @@
                 class="float-right badge badge-info p-2"
                 href="{{link.url}}"
                 target="_blank"
-                >Visit</a
+                >Visit &nearr;</a
               >
             </li>
             {% empty %}
@@ -361,7 +361,7 @@
                 class="float-right badge badge-info p-2"
                 href="{{link.url}}"
                 target="_blank"
-                >Visit</a
+                >Visit &nearr;</a
               >
             </li>
             {% empty %}
