--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -35,8 +35,15 @@
         links. <strong>{{object.uncrawled_page_results|length}}</strong> pages
         left to crawl.
       </li>
+
       {% endif %}
 
+      {% if object.max_page_results %}
+      <li><span class="text-info">This site currently has a max limit of <strong>{{object.max_page_results}} pages</strong> that will be crawled.</span></li>
+      {% endif %}
+
+
+      {% if object.internal_page_results|length > 0 %}
       <li class="clearfix">
           
           {% if object.pages_with_errors|length > 0 %}  
@@ -49,8 +56,11 @@
             </span>
           </a>
       </li>
+      {% endif %}
       
     </ul>
+
+    {% if object.internal_page_results|length > 0 %}
     <ul class="list-unstyled clearfix">
       <!-- <li class="float-right">
         <a
@@ -77,6 +87,7 @@
         <small class="text-muted">View pages as:</small>
       </li>
     </ul>
+    {% endif %}
   </aside>
 
   <div class="" id="links">
