--- a/sitecomber/apps/config/templates/config/partials/page_preview.html
+++ b/sitecomber/apps/config/templates/config/partials/page_preview.html
@@ -9,39 +9,22 @@
           <h1 class="page-title h5 text-light mb-1">
             {{page_result.title}}
             <span
-              class="status-code status-code-{{page_result.latest_status_code}}"
-              title="{{page_result.latest_status_code}}"
+              class="status-code status-code-{{page_result.last_status_code}}"
+              title="{{page_result.last_status_code}}"
             ></span>
           </h1>
           <small class="url h6 text-white-50 m-0">{{page_result.url}}</small>
         </a>
       </div>
       <div class="p-2 flex-fill text-right">
-        {% with errors=page_result.error_test_results %}
-        {% if errors|length > 0 %}
-        <a 
-          href="{% url 'page-result-detail' object.pk page_result.pk %}" 
-          title="{% for error in errors %}{{error.message}}{% if not forloop.last %}, {%endif %}{% endfor %}"
-        >
-          <span class="badge badge-danger p-1 ml-2" >
-             {{errors|length}} error{% if errors|length > 1 %}s{% endif %}
-          </span>
-        </a>
-        {% endif %}
-        {% endwith %}
 
-        {% with warnings=page_result.warning_test_results %}
-        {% if warnings|length > 0 %}
-        <a 
-          href="{% url 'page-result-detail' object.pk page_result.pk %}" 
-          title="{% for warning in warnings %}{{warning.message}}{% if not forloop.last %}, {%endif %}{% endfor %}"
-        >
-          <span class="badge badge-warning p-1 ml-2" >
-             {{warnings|length}} warning{% if warnings|length > 1 %}s{% endif %}
-          </span>
-        </a>
+        {% if page_result.error_synopsis %}
+        {{page_result.error_synopsis|safe}}
         {% endif %}
-        {% endwith %}
+
+        {% if page_result.warning_synoposis %}
+        {{page_result.warning_synoposis|safe}}
+        {% endif %}
 
         <a
           href="{{page_result.url}}"
