working on frontend

--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -60,6 +60,9 @@
       
     </ul>
 
+    <div id="sitemap"></div>
+    
+
     {% if object.internal_page_results|length > 0 %}
     <ul class="list-unstyled clearfix">
       <!-- <li class="float-right">
