--- a/sitecomber/apps/shared/templates/base.html
+++ b/sitecomber/apps/shared/templates/base.html
@@ -75,7 +75,8 @@
         <!-- Scripts -->
         <script src="{% static 'main.js' %}"></script>
         
-        {% block js %}{% endblock %}
+        {% block js %}
+        {% endblock %}
 
     </body>
 </html>
