fixing error report detail view

--- a/sitecomber/apps/results/templates/results/pageresult_detail.html
+++ b/sitecomber/apps/results/templates/results/pageresult_detail.html
@@ -145,7 +145,7 @@
 
 
 
-          {% if reader_test.data_json.article %}
+          {% if reader_test and reader_test.data_json and reader_test.data_json.article %}
           <h4 class="text-info">Article Detected:</h4>
           <article class="mb-4 p-4 bg-light rounded">
             <h1>{{reader_test.data_json.article.title}}</h1>
@@ -181,7 +181,13 @@
 
             {% if reader_test.data_json.article.text %}
             <main class="my-2">
+
+              {% if spell_check_test and spell_check_test.data_json %}
               {{reader_test.data_json.article.text|linebreaks|highlight_spelling_errors:spell_check_test.data_json.misspelled_words}}
+              {% else %}
+              {{reader_test.data_json.article.text|linebreaks}}
+              {% endif %}
+
             </main>
             {% else %}
             <h4 class="text-danger">No article text identified</h4>
@@ -193,6 +199,9 @@
           {% endif %} 
 
           <hr />
+
+
+          {% if spell_check_test and spell_check_test.data_json %}
           {% if spell_check_test.success %}
           <h4 class="text-info">No misspelled words found.</h4>
           {% else %}
@@ -211,8 +220,11 @@
   }
 </pre></small></p>
           {% endif %} 
+          {% endif %} 
 
           <hr />
+
+          {% if placeholder_text_test and placeholder_text_test.data_json %}
           {% if placeholder_text_test.success %}
           <h4 class="text-info">
             No placeholder text found. Words searched were {% for word in placeholder_text_test.data_json.placeholder_words_searched %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}
@@ -225,6 +237,7 @@
             {{word}}{% if not forloop.last %}, {% endif %}
             {% endfor %}
           </h4>
+          {% endif %}
           {% endif %}
 
 
