working on sitemap visualizer

--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -1,3 +1,4 @@
-@import './styles/vars';
-@import './styles/theme';
-@import './styles/ui';
+@import "./styles/vars";
+@import "./styles/theme";
+@import "./styles/ui";
+@import "./styles/sitemap";
