--- a/frontend/styles/_theme.scss
+++ b/frontend/styles/_theme.scss
@@ -34,34 +34,29 @@
 @import "node_modules/bootstrap/scss/carousel";
 @import "node_modules/bootstrap/scss/utilities";
 
-
-
 /*
  * Globals
  */
-
-
 
 /*
  * Base structure
  */
 
-html{
-  height:100%;
- }
+html {
+  height: 100%;
+}
 
 body {
   display: -ms-flexbox;
   display: flex;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-  min-height:100%;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  min-height: 100%;
 }
 
 .cover-container {
-  width:90%;
+  width: 90%;
   max-width: 75em;
 }
-
 
 /*
  * Header
@@ -75,16 +70,16 @@ body {
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -104,4 +99,3 @@ body {
     float: right;
   }
 }
-
