--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
 {% block bodyclass %}{{block.super}} site-detail{% endblock %}
-
-
 {% block js %}
 {{block.super}}
 <script>
-  var sitemap_data = [
-  {% for key, item in object.page_results_hierarchy.items %}
-  {% include 'config/partials/page_tree_json.html' with child=item %}{% if not forloop.last %},{% endif %}
-  {% endfor %}
-  ]
+  var sitemap_data =
+  {
+      "name": "{{object}}",
+      "url": "{{object.url}}",
+      "path": "/",
+      "full_path": "{{object.url}}",
+      "children": [
+    {% for key, item in object.page_results_hierarchy.items %}
+    {% include 'config/partials/page_tree_json.html' with child=item %}{% if not forloop.last %},{% endif %}
+    {% endfor %}
+    ]
+  }
 </script>
 {% endblock %}
-
-
 
 {% block inner %}
 <nav aria-label="breadcrumb" class="my-4">
@@ -26,22 +29,26 @@
 <article class="main">
   <h1>{{object}}</h1>
   <h2 class="text-secondary h5">
-    {% for url in object.domains %}<a href="{{url}}" target="_blank" class="text-secondary">{{url}}</a>{% if not forloop.last %}, {% endif %}{% endfor %}
+    {% for url in object.domains %}<a
+      href="{{url}}"
+      target="_blank"
+      class="text-secondary"
+      >{{url}}</a
+    >{% if not forloop.last %}, {% endif %}{% endfor %}
   </h2>
 
   <aside>
     <ul class="list-unstyled">
       {% if object.has_fully_crawled_site %}
-        {% if object.internal_page_results|length == 0 %}
-        <li>Crawling has not yet started.</li>
-        {% else %}
-        <li>
-          Found <strong>{{object.internal_page_results|length}}</strong> internal
-          pages, with
-          <strong>{{object.external_page_results|length}}</strong> outgoing links.
-        </li>
-        {% endif %}
+      {% if object.internal_page_results|length == 0 %}
+      <li>Crawling has not yet started.</li>
       {% else %}
+      <li>
+        Found <strong>{{object.internal_page_results|length}}</strong> internal
+        pages, with
+        <strong>{{object.external_page_results|length}}</strong> outgoing links.
+      </li>
+      {% endif %} {% else %}
       <li>
         (So far) Found
         <strong>{{object.internal_page_results|length}}</strong> internal pages,
@@ -50,32 +57,35 @@
         left to crawl.
       </li>
 
-      {% endif %}
-
-      {% if object.max_page_results %}
-      <li><span class="text-info">This site currently has a max limit of <strong>{{object.max_page_results}} pages</strong> that will be crawled.</span></li>
-      {% endif %}
-
-
-      {% if object.internal_page_results|length > 0 %}
+      {% endif %} {% if object.max_page_results %}
+      <li>
+        <span class="text-info"
+          >This site currently has a max limit of
+          <strong>{{object.max_page_results}} pages</strong> that will be
+          crawled.</span
+        >
+      </li>
+      {% endif %} {% if object.internal_page_results|length > 0 %}
       <li class="clearfix">
-          
-          {% if object.pages_with_errors|length > 0 %}  
-            <p class="float-left text-danger"><strong>{{object.pages_with_errors|length}}</strong> pages with errors</p>
-          {% endif %}
+        {% if object.pages_with_errors|length > 0 %}
+        <p class="float-left text-danger">
+          <strong>{{object.pages_with_errors|length}}</strong> pages with errors
+        </p>
+        {% endif %}
 
-          <a href="{% url 'site-test-results' object.pk %}"  class="text-danger float-right">
-            <span class="badge badge-info p-1 ml-2" >
-              Site Test Results
-            </span>
-          </a>
+        <a
+          href="{% url 'site-test-results' object.pk %}"
+          class="text-danger float-right"
+        >
+          <span class="badge badge-info p-1 ml-2">
+            Site Test Results
+          </span>
+        </a>
       </li>
       {% endif %}
-      
     </ul>
 
     <div id="sitemap"></div>
-    
 
     {% if object.internal_page_results|length > 0 %}
     <ul class="list-unstyled clearfix">
@@ -108,24 +118,22 @@
   </aside>
 
   <div class="" id="links">
-
     <ul class="list-unstyled children">
-    {% for key, item in object.page_results_hierarchy.items %}
+      {% for key, item in object.page_results_hierarchy.items %}
       <li class="clearfix">
-      {% include 'config/partials/page_tree.html' with child=item %}
+        {% include 'config/partials/page_tree.html' with child=item %}
       </li>
-    {% endfor %}
+      {% endfor %}
     </ul>
 
     {% comment %}
     <ul class="list-unstyled">
-      {% for page_result in object.internal_page_results %}
-      {% if not page_result.is_root %}
+      {% for page_result in object.internal_page_results %} {% if not
+      page_result.is_root %}
       <li>
         {% include 'config/partials/page_preview.html' %}
       </li>
-      {% endif %}
-      {% endfor %}
+      {% endif %} {% endfor %}
     </ul>
     {% endcomment %}
   </div>
