--- a/frontend/main.scss
+++ b/frontend/main.scss
@@ -2,3 +2,5 @@
 @import "./styles/theme";
 @import "./styles/ui";
 @import "./styles/sitemap";
+@import "./styles/article";
+@import "./styles/seo";
