--- a/sitecomber/apps/results/templates/results/pageresult_detail.html
+++ b/sitecomber/apps/results/templates/results/pageresult_detail.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% load results_tags %}
-{% block bodyclass %}{{block.super}} page-detail{% endblock %} 
+{% block bodyclass %}{{block.super}} page-detail{% endblock %}
 
 {% block inner %}
 
@@ -127,7 +127,7 @@
 
               <div  class="p-2 ">
                 <a href="{% url 'site-test-results' object.site_domain.site.pk %}#{{result.test_title}}" class="text-{{result.bootstrap_class}}" text="View site-wide report for {{result.test_title}}"><h6>{{result.test_title}}</h6></a>
-            
+
                 {{result.message|safe}}
               </div>
             </li>
@@ -138,135 +138,16 @@
         </div>
 
         <div class="tab-pane" id="article" role="tabpanel">
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.ReaderViewTest" as reader_test %} 
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.ArticleReadTimeInfo" as readtime_test %}
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.SpellCheckTest" as spell_check_test %}
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.PlaceholderTextTest" as placeholder_text_test %} 
-
-
-
-          {% if reader_test and reader_test.data_json and reader_test.data_json.article %}
-          <h4 class="text-info">Article Detected:</h4>
-          <article class="mb-4 p-4 bg-light rounded">
-            <h1>{{reader_test.data_json.article.title}}</h1>
-            {% if readtime_test.data_json.read_time %}
-              <small>
-                <strong>Read time:</strong>
-                {{readtime_test.data_json.read_time}}
-              </small>
-            {% endif %} 
-
-            {% if reader_test.data_json.article.publish_date %}
-              <h3 class="h5">{{reader_test.data_json.article.publish_date}}</h3>
-            {% else %}
-              <h3 class="text-danger h5">No publish date identified</h3>
-            {% endif %} 
-
-            {% if reader_test.data_json.article.authors %}
-              <h4 class=" h6">{{reader_test.data_json.article.authors}}</h4>
-            {% else %}
-              <h4 class="text-danger h6">No authors identified</h4>
-            {% endif %} 
-
-            {% if reader_test.data_json.article.top_image %}
-              <img
-                src="{{reader_test.data_json.article.top_image}}"
-                alt="Top image for {{reader_test.data_json.article.title}}"
-                class="my-4"
-              />
-            {% else %}
-              <h4 class="text-danger">No top image identified</h4>
-            {% endif %} 
-
-
-            {% if reader_test.data_json.article.text %}
-            <main class="my-2">
-
-              {% if spell_check_test and spell_check_test.data_json %}
-              {{reader_test.data_json.article.text|linebreaks|highlight_spelling_errors:spell_check_test.data_json.misspelled_words}}
-              {% else %}
-              {{reader_test.data_json.article.text|linebreaks}}
-              {% endif %}
-
-            </main>
-            {% else %}
-            <h4 class="text-danger">No article text identified</h4>
-            {% endif %}
-          </article>
-          {% else %}
-
-          <strong class="text-danger">{{reader_test.message|safe}}</strong> 
-          {% endif %} 
-
-          <hr />
-
-
-          {% if spell_check_test and spell_check_test.data_json %}
-          {% if spell_check_test.success %}
-          <h4 class="text-info">No misspelled words found.</h4>
-          {% else %}
-          <h4 class="text-danger">
-            Found {{spell_check_test.data_json.misspelled_words|length}}
-            unrecognized words: {% for word in spell_check_test.data_json.misspelled_words %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}
-          </h4>
-          <p class="text-muted"><small>It may be that this word is simply not in our dictionary. To add this word to the custom dictionary <a href="/admin/config/site/{{object.site_domain.site.pk}}/change/">click here</a> and scroll down to the "SpellCheckTest" section. Custom words should be entered as a JSON list, in this format:
-<pre class="text-muted">
-  {
-    "known_words": [
-      "swole",
-      "cheesemonger",
-      "gadzooks",
-    ]
-  }
-</pre></small></p>
-          {% endif %} 
-          {% endif %} 
-
-          <hr />
-
-          {% if placeholder_text_test and placeholder_text_test.data_json %}
-          {% if placeholder_text_test.success %}
-          <h4 class="text-info">
-            No placeholder text found. Words searched were {% for word in placeholder_text_test.data_json.placeholder_words_searched %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}
-          </h4>
-          {% else %}
-          <h4 class="text-danger">
-            Found
-            {{placeholder_text_test.data_json.placeholder_words_found|length}}
-            placeholder words: {% for word in placeholder_text_test.data_json.placeholder_words_found %}
-            {{word}}{% if not forloop.last %}, {% endif %}
-            {% endfor %}
-          </h4>
-          {% endif %}
-          {% endif %}
-
-
+          {% include 'results/partials/pageresult__article_tab.html' %}
         </div>
-
         <div class="tab-pane" id="seo" role="tabpanel">
-          SEO TODO
-          <ul>
-            <li>Display page meta tags</li>
-            <li>Social media share info</li>
-            <li>Duplicate content warning</li>
-            <li>Sitemap warning</li>
-          </ul>
+          {% include 'results/partials/pageresult__seo_tab.html' %}
         </div>
         <div class="tab-pane" id="technical" role="tabpanel">
-          Technical TODO
-          <ul>
-            <li>HTML Validation</li>
-            <li>Page speed test via Google API</li>
-            <li>
-              Validate server security (certificate, known vulnerabilities)
-            </li>
-          </ul>
+          {% include 'results/partials/pageresult__technical_tab.html' %}
         </div>
         <div class="tab-pane" id="accessibility" role="tabpanel">
-          Accessibility TODO
-          <ul>
-            <li>Image and video alt text</li>
-          </ul>
+          {% include 'results/partials/pageresult__accessibility_tab.html' %}
         </div>
         <div
           class="tab-pane"
@@ -274,60 +155,7 @@
           role="tabpanel"
           aria-labelledby="history-tab"
         >
-          {% if object.latest_request %} 
-
-            {% if object.latest_request.response %}
-            <h4>Request Path</h4>
-            <ul class="list-unstyled">
-              <li>
-                <strong>{{object.latest_request.method}}</strong> on
-                {{object.latest_request.load_start_time}}
-              </li>
-              {% for response in object.response_list %}
-              <li>
-                <strong>{{response.status_code}}</strong>
-                {{response.response_url}} [{{response.content_type}}{% if response.content_length %} - {{response.content_length}}{% endif %}] <em>{{response.time_elapsed_ms}}ms</em>
-              </li>
-              {% endfor %}
-            </ul>
-            {% endif %}
-            <div class="clearfix mt-4">
-              <h4>Request Headers</h4>
-              <div class="border rounded bg-light clearfix">
-                <dl>
-                  {% for key, value in object.latest_request.request_header_json.items %}
-                  <dt>{{key}}</dt>
-                  <dd>{{value}}</dd>
-                  {% endfor %}
-                </dl>
-              </div>
-            </div>
-            <div class="clearfix mt-4">
-              <h4>Response Headers</h4>
-              <div class="border rounded bg-light clearfix">
-                {% if object.latest_request.response %}
-                  <dl>
-                    {% for key, value in object.latest_request.response.response_header_json.items %}
-                    <dt>{{key}}</dt>
-                    <dd>{{value}}</dd>
-                    {% endfor %}
-                  </dl>
-                {% else %}
-                  <p>Page response hasn't been recorded</p>
-                {% endif %}
-              </div>
-            </div>
-              {% if object.latest_request.response.text_content %}
-              <h4 class="mt-4">Source</h4>
-              <div class="border rounded bg-light p-3">
-                <pre>{{object.latest_request.response.enumerated_source}}</pre>
-              </div>
-              {% endif %} 
-            {% else %}
-              <p>Page hasn't been loaded yet</p>
-        
-        {% endif %}
-        
+          {% include 'results/partials/pageresult__request_details_tab.html' %}
         </div>
 
         <div
@@ -336,53 +164,7 @@
           role="tabpanel"
           aria-labelledby="deals-tab"
         >
-          <h4>Incoming links from within {{object.site_domain.site}}</h4>
-          <ul class="list-unstyled">
-            {% for link in object.incoming_links_with_prefetch.all %}
-            <li class="my-1 clearfix">
-              <a
-                href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}"
-                title="{{link.last_status_code}}"
-                >{{link.url}}
-                <span
-                  class="status-code status-code-{{link.last_status_code}}"
-                  
-                ></span
-              ></a>
-              <a
-                class="float-right badge badge-info p-2"
-                href="{{link.url}}"
-                target="_blank"
-                >Visit &nearr;</a
-              >
-            </li>
-            {% empty %}
-            <li>No internal links to this page found yet.</li>
-            {% endfor %}
-          </ul>
-          <h4>Outgoing links</h4>
-          <ul class="list-unstyled">
-            {% for link in object.outgoing_links_with_prefetch.all %}
-            <li class="my-1 clearfix">
-              <a
-                href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}"
-                title="{{link.last_status_code}}"
-                >{{link.url}}
-                <span
-                  class="status-code status-code-{{link.last_status_code}}"
-                ></span
-              ></a>
-              <a
-                class="float-right badge badge-info p-2"
-                href="{{link.url}}"
-                target="_blank"
-                >Visit &nearr;</a
-              >
-            </li>
-            {% empty %}
-            <li>No outgoing links found on this page.</li>
-            {% endfor %}
-          </ul>
+          {% include 'results/partials/pageresult__links_tab.html' %}
         </div>
       </div>
     </div>
