--- a/sitecomber/apps/shared/templates/base.html
+++ b/sitecomber/apps/shared/templates/base.html
@@ -14,34 +14,23 @@
 
         <title>{% block title %}SiteComber{% endblock %}</title>
         <meta name="description" content="{% block description %}{% endblock %}" />
-        
+
         <!-- Icons -->
         <!-- See http://realfavicongenerator.net/ for generating favicon variants -->
-        <link rel="apple-touch-icon" sizes="57x57" href="{% static 'apple-touch-icon-57x57.png' %}">
-        <link rel="apple-touch-icon" sizes="60x60" href="{% static 'apple-touch-icon-60x60.png' %}">
-        <link rel="apple-touch-icon" sizes="72x72" href="{% static 'apple-touch-icon-72x72.png' %}">
-        <link rel="apple-touch-icon" sizes="76x76" href="{% static 'apple-touch-icon-76x76.png' %}">
-        <link rel="apple-touch-icon" sizes="114x114" href="{% static 'apple-touch-icon-114x114.png' %}">
-        <link rel="apple-touch-icon" sizes="120x120" href="{% static 'apple-touch-icon-120x120.png' %}">
-        <link rel="apple-touch-icon" sizes="144x144" href="{% static 'apple-touch-icon-144x144.png' %}">
-        <link rel="apple-touch-icon" sizes="152x152" href="{% static 'apple-touch-icon-152x152.png' %}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon-180x180.png' %}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" href="{% static 'favicon-32x32.png' %}" sizes="32x32">
-        <link rel="icon" type="image/png" href="{% static 'favicon-194x194.png' %}" sizes="194x194">
-        <link rel="icon" type="image/png" href="{% static 'favicon-96x96.png' %}" sizes="96x96">
-        <link rel="icon" type="image/png" href="{% static 'android-chrome-192x192.png' %}" sizes="192x192">
         <link rel="icon" type="image/png" href="{% static 'favicon-16x16.png' %}" sizes="16x16">
-        <link rel="manifest" href="{% static 'manifest.json' %}">
-        <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#eac428">
-        <meta name="msapplication-TileColor" content="#eac428">
-        <meta name="msapplication-TileImage" content="{% static 'mstile-144x144.png' %}">
+        <link rel="icon" type="image/png" href="{% static 'android-chrome-192x192.png' %}" sizes="192x192">
+        <link rel="manifest" href="{% static 'site.webmanifest' %}">
+        <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#00adba">
+        <meta name="msapplication-TileColor" content="#00adba">
         <meta name="theme-color" content="#ffffff">
 
         <!-- Styles -->
         <link rel="stylesheet" href="{% static 'main.css' %}" >
 
-        {% block css %}{% endblock %}     
-        
+        {% block css %}{% endblock %}
+
     </head>
     <body class="{% block bodyclass %}bg-dark text-white {% endblock %}">
 
@@ -69,12 +58,12 @@
           </div>
         </footer>
       </div>
-        
-    
-        
+
+
+
         <!-- Scripts -->
         <script src="{% static 'main.js' %}"></script>
-        
+
         {% block js %}
         {% endblock %}
 
