add github fork me corner

--- a/sitecomber/apps/shared/templates/base.html
+++ b/sitecomber/apps/shared/templates/base.html
@@ -34,6 +34,7 @@
     </head>
     <body class="{% block bodyclass %}bg-dark text-white {% endblock %}">
 
+      <a href="https://github.com/ninapavlich/sitecomber" style="position:fixed;top:0;right:0;"><img width="149" height="149" src="https://github.blog/wp-content/uploads/2008/12/forkme_right_gray_6d6d6d.png?resize=149%2C149" class="attachment-full size-full" alt="Fork me on GitHub" data-recalc-dims="1"></a>
 
       <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
@@ -42,7 +43,6 @@
             <nav class="nav nav-masthead justify-content-center">
               <a class="nav-link active" href="/">Results</a>
               <a class="nav-link" href="/admin/">Configure</a>
-              <a class="nav-link" href="https://github.com/ninapavlich/sitecomber">Source</a>
             </nav>
           </div>
         </header>
