--- a/sitecomber/apps/shared/static/main.css
+++ b/sitecomber/apps/shared/static/main.css
@@ -6968,7 +6968,6 @@ html {
 body {
   display: -ms-flexbox;
   display: flex;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   min-height: 100%; }
 
 .cover-container {
@@ -7136,6 +7135,151 @@ a.card-title {
             padding: 0 !important; }
             #links.sitemap .children .child article .card-body .flex-fill .badge {
               margin-top: 0 !important; }
+
+.interactive-sitemap {
+  position: relative;
+  width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+  margin-left: calc(-1em - ((100vw - 75em) * 0.5)); }
+  .interactive-sitemap:after {
+    box-shadow: inset 0px 0px 20px 40px #343a40;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; }
+  .interactive-sitemap .node {
+    position: absolute; }
+    .interactive-sitemap .node:before {
+      content: "";
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      border-radius: 0.5em;
+      cursor: pointer; }
+    .interactive-sitemap .node.site:before {
+      width: 2em;
+      height: 2em;
+      border-radius: 1em;
+      background-color: #00adba; }
+    .interactive-sitemap .node.page:before {
+      background-color: #e9ecef; }
+    .interactive-sitemap .node.page.leaf:before {
+      border: 0.125em solid #e9ecef;
+      background-color: transparent; }
+    .interactive-sitemap .node.path:before {
+      background-color: #6c757d; }
+    .interactive-sitemap .node.path.leaf:before {
+      border: 0.125em solid #6c757d;
+      background-color: transparent; }
+    .interactive-sitemap .node .flag-rotated {
+      display: none;
+      position: absolute;
+      transform: rotate(-45deg);
+      transform-origin: 0 0;
+      left: 0.5em;
+      top: 0.5em; }
+      .interactive-sitemap .node .flag-rotated h1 {
+        font-size: 0.75rem;
+        margin: 0 1em;
+        white-space: nowrap; }
+    .interactive-sitemap .node .flag {
+      display: none;
+      padding: 0.5em 1em;
+      position: absolute;
+      font-size: 0.75rem;
+      line-height: normal;
+      /* flag pole */
+      /* hitstate */ }
+      .interactive-sitemap .node .flag a {
+        color: #fff; }
+      .interactive-sitemap .node .flag h1 {
+        font-size: 0.75rem;
+        margin: 0 0 0.25em 0;
+        white-space: nowrap; }
+      .interactive-sitemap .node .flag h2 {
+        font-size: 0.5rem;
+        margin: 0 0 0.25em 0; }
+      .interactive-sitemap .node .flag p {
+        opacity: 0.6;
+        font-size: 0.5rem;
+        margin: 0; }
+      .interactive-sitemap .node .flag:before {
+        content: "";
+        position: absolute;
+        background-color: #00adba;
+        height: calc(100% + 3em);
+        width: 1px; }
+      .interactive-sitemap .node .flag:after {
+        content: "";
+        position: absolute;
+        background-color: #ff00ff;
+        height: calc(100% + 3rem);
+        width: 100%;
+        z-index: -1;
+        display: none;
+        top: 0;
+        left: 0;
+        opacity: 0; }
+      .interactive-sitemap .node .flag.flag-up-right {
+        transform: translate(0px, -3em);
+        transform-origin: left bottom;
+        border-radius: 0 0.5em 0.5em 0;
+        left: 50%;
+        bottom: 1rem; }
+        .interactive-sitemap .node .flag.flag-up-right:before {
+          left: 0;
+          top: 0; }
+      .interactive-sitemap .node .flag.flag-up-left {
+        transform: translate(0px, -3em);
+        transform-origin: left bottom;
+        border-radius: 0.5em 0 0 0.5em 0.5em;
+        right: 50%;
+        bottom: 1rem; }
+        .interactive-sitemap .node .flag.flag-up-left:before {
+          right: 0;
+          top: 0; }
+      .interactive-sitemap .node .flag.flag-down-right {
+        transform: translate(0px, 3em);
+        transform-origin: left bottom;
+        border-radius: 0 0.5em 0.5em 0;
+        left: 50%;
+        top: 1rem; }
+        .interactive-sitemap .node .flag.flag-down-right:before {
+          left: 0;
+          bottom: 0; }
+      .interactive-sitemap .node .flag.flag-down-left {
+        transform: translate(0px, 3em);
+        transform-origin: left bottom;
+        border-radius: 0.5em 0 0 0.5em 0.5em;
+        right: 50%;
+        top: 1rem; }
+        .interactive-sitemap .node .flag.flag-down-left:before {
+          right: 0;
+          bottom: 0; }
+    .interactive-sitemap .node:hover {
+      z-index: 1000; }
+      .interactive-sitemap .node:hover:before {
+        background-color: #00adba !important;
+        border-color: #00adba !important; }
+      .interactive-sitemap .node:hover .flag {
+        display: block; }
+        .interactive-sitemap .node:hover .flag:after {
+          display: block; }
+    .interactive-sitemap .node.layer-0 .flag {
+      display: block;
+      border-radius: 0.5em;
+      background-color: rgba(0, 0, 0, 0.8) !important;
+      transform: translate(-50%, -50%); }
+      .interactive-sitemap .node.layer-0 .flag:before {
+        display: none; }
+    .interactive-sitemap .node.layer-1 .flag-rotated {
+      display: block; }
+      .interactive-sitemap .node.layer-1 .flag-rotated h2, .interactive-sitemap .node.layer-1 .flag-rotated p {
+        display: none; }
 
 #article article {
   max-width: 600px; }
