--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -1,6 +1,24 @@
 {% extends 'base.html' %}
 {% block bodyclass %}{{block.super}} site-detail{% endblock %}
 
+{% block js %}
+{{block.super}}
+<script>
+  var sitemap_data =
+  {
+      "name": "{{object}}",
+      "url": "{{object.domains.0}}",
+      "path": "/",
+      "full_url": "{{object.domains.0}}/",
+      "full_path": "/",
+      "children": [
+    {% for key, item in object.page_results_hierarchy.items %}
+    {% include 'config/partials/page_tree_json.html' with child=item %}{% if not forloop.last %},{% endif %}
+    {% endfor %}
+    ]
+  }
+</script>
+{% endblock %}
 
 {% block inner %}
 <nav aria-label="breadcrumb" class="my-4">
@@ -69,6 +87,9 @@
       {% endif %}
     </ul>
 
+
+
+    <div class="interactive-sitemap"></div>
 
     {% if object.internal_page_results|length > 0 %}
     <ul class="list-unstyled clearfix">
